--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,5 @@
 <h1>編集ページ</h1>
 
-<%= form_with(model: @task, local: true) do |edit| %>
-  <%= edit.label :content, 'メッセージ' %>
-  <%= edit.text_field :content %>
-  
-  <%= edit.submit '登録' %>
-<% end %>
+<%= render 'form', task: @task %>
 
 <% link_to '一覧に戻る', tasks_path %>
